fix : changement du z-index du loader

--- a/scss/accueil/_loading.scss
+++ b/scss/accueil/_loading.scss
@@ -7,7 +7,7 @@
     width: 100vw;
     background-color: rgba(245, 245, 245, 0.95);
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     justify-content: center;
     align-items: center;
     animation-duration: 3s;
